@@ -380,9 +380,8 @@ public class MissingBatchItemsFragment extends Fragment
         }
 
         int indexNextOnServer = 0;
-        for(int i=0; i < missingBatchItems.size(); i++) {
-            indexNextOnServer = i;
-            if(missingBatchItems.get(i).getIsOnServer()) break;
+        while(indexNextOnServer < missingBatchItems.size()-1 && !missingBatchItems.get(indexNextOnServer).getIsOnServer()) {
+            indexNextOnServer++;
         }
 
         MissingBatchItem missingBatchItem = missingBatchItems.get(indexNextOnServer);
@@ -399,6 +398,7 @@ public class MissingBatchItemsFragment extends Fragment
         // TODO: There should be an error in the UI
         if(missingBatchItem.getProductId() == null) return;
 
+        final int indexNextOnServerFinal = indexNextOnServer;
         purchaseProduct(
                 Integer.parseInt(missingBatchItem.getProductId()),
                 batchPurchaseEntry.getLocationId(),
@@ -409,14 +409,12 @@ public class MissingBatchItemsFragment extends Fragment
                     if(batchPurchaseEntries.isEmpty()) return;
                     batchPurchaseEntries.remove(0);
                     if(batchPurchaseEntries.isEmpty() && !missingBatchItems.isEmpty()) {
-                        missingBatchItems.remove(0);
-                        missingBatchItemAdapter.notifyItemRemoved(0);
+                        missingBatchItems.remove(indexNextOnServerFinal);
+                        missingBatchItemAdapter.notifyItemRemoved(indexNextOnServerFinal);
                     }
                     updateFab();
                     if(getReadyPurchaseEntriesSize() == 0) {
-                        showMessage(
-                                activity.getString(R.string.msg_purchase_transactions_done)
-                        );
+                        showMessage(activity.getString(R.string.msg_purchase_transactions_done));
                     } else {
                         doOnePurchaseRequest();
                     }
